--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,15 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+pythonenv*
+
 authenticate.conf
 tmp/
