add: state:poweroffを実装

--- a/sample-playbook/power_off.yml
+++ b/sample-playbook/power_off.yml
@@ -8,4 +8,5 @@
       esxiusername: '{{ esxiuser }}'
       esxipassword: '{{ esxipass }}'
       vmname: test.vm
+      # state: poweroff
       state: shutdown
