add: playbookのネットワークデバイス定義のリスト参照

--- a/sample-playbook/create_vm.yml
+++ b/sample-playbook/create_vm.yml
@@ -16,6 +16,8 @@
       networks:
         - name: VM Network
           device_type: vmxnet3
+        - name: private-network-1
+          device_type: vmxnet3
       disk:
         - size_gb: 10
           type: thin
