update: power_on/off sample playbookの対象VMをcreate/deleteと同じものに変更

--- a/sample-playbook/power_off.yml
+++ b/sample-playbook/power_off.yml
@@ -7,6 +7,6 @@
       esxiaddress: '{{ esxiaddr }}'
       esxiusername: '{{ esxiuser }}'
       esxipassword: '{{ esxipass }}'
-      vmname: test.vm
+      vmname: vm-example
       # state: poweroff
       state: shutdown
