--- a/sample-playbook/power_on.yml
+++ b/sample-playbook/power_on.yml
@@ -7,5 +7,5 @@
       esxiaddress: '{{ esxiaddr }}'
       esxiusername: '{{ esxiuser }}'
       esxipassword: '{{ esxipass }}'
-      vmname: test.vm
+      vmname: vm-example
       state: poweron
