add: collections_path

--- a/sample-playbook/ansible.cfg
+++ b/sample-playbook/ansible.cfg
@@ -1,3 +1,4 @@
 [defaults]
 stdout_callback = yaml
 interpreter_python = /home/zaki/src/py-esxi-ssh/venv/bin/python
+collections_path = /home/zaki/src/esxi-ansible/collections/
