update: sample collection path

--- a/sample-playbook/ansible.cfg
+++ b/sample-playbook/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
 stdout_callback = yaml
 interpreter_python = /home/zaki/src/py-esxi-ssh/venv/bin/python
-collections_path = /home/zaki/src/esxi-ansible/collections/
+collections_path = /path/to/collections/
