--- a/galaxy.yml
+++ b/galaxy.yml
@@ -60,5 +60,10 @@ issues: https://github.com/zaki-lknr/esxissh-ansible/issues
 # artifact. A pattern is matched from the relative path of the file or directory of the collection directory. This
 # uses 'fnmatch' to match the files or directories. Some directories and files like 'galaxy.yml', '*.pyc', '*.retry',
 # and '.git' are always filtered
-build_ignore: []
-
+build_ignore:
+  - venv
+  - tmp
+  - '*.bak'
+  - '*.pyc'
+  - '*.retry'
+  - sample-playbook
